config/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-cms
  labels:
    app: cms
    component: frontend
  name: home-cms-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms
      component: frontend
  template:
    metadata:
      labels:
        app: cms
        component: frontend
    spec:
      containers:
        - image: 192.168.11.3:10000/ci/home-cms:frontend.master.39f988b.200202.7
          name: home-cms-frontend
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 5000
            name: port
            protocol: TCP
      imagePullSecrets:
      - name: registry-secret
