config/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-frontend-svc
  namespace: home-cms
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: cms
    component: frontend
