config/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: home-cms-frontend-ingress
  namespace: home-cms
spec:
  rules:
    - host: cms.home
      http:
        paths:
          - backend:
              serviceName: cms-frontend-svc
              servicePort: 80
            path: /
